--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="asteroides.example.org.asteroides">
 
     <application
@@ -9,13 +10,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".views.aboutUs.AboutUsActivity"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
+        <activity android:name=".views.settings.PreferencesActivity" android:theme="@style/SettingsTheme"/>
+        <activity android:name=".views.scoreList.ScoreListActivity"/>
+        <activity android:name=".views.gameBoard.Game"/>
     </application>
 
 </manifest>
