--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:preference-v7:26.1.0'
     compile 'com.android.support:preference-v14:26.1.0'
+
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.midorikocak:currency-picker-android:1.1.9'
+    compile 'com.hbb20:ccp:2.1.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:design:26.1.0'
 }
